# edunews-subxt

./: Cargo.toml  README.md  fetch-metadata.sh  sample-article.txt
artifacts/: educhain.scale
src/: config.rs  error.rs  main.rs  remark.rs  types.rs  utils.rs
src/chains/: assethub.rs  educhain.rs  mod.rs  peoplehub.rs
src/commands/: identity.rs  list.rs  mod.rs  register.rs  show.rs  verify.rs
