[package]
name = "edunews"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive", "env"] }
subxt = "0.44.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake2 = "0.10"
hex = "0.4"
indicatif = "0.17"
colored = "2.0"
subxt-signer = "0.44.0"
